--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>CrudProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://media-exp1.licdn.com/dms/image/C4D0BAQFBjAikyfoWXQ/company-logo_200_200/0?e=2159024400&v=beta&t=ScZYbE_JvdE9oZXabnESeP137diF9NTiREgVRs7tlIY">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
